--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,3 +29,14 @@ jobs:
       - uses: actions/checkout@v2
       # Use Docker compose Github action
       - uses: isbang/compose-action@v1.0.0
+      - name: Run Prettier Check
+        run: docker-compose exec client npm run prettier:check 
+      - name: Run Setup App
+        run: |
+          docker-compose exec api python manage.py recreate_db
+          docker-compose exec api python manage.py seed_db
+      - name: Run Python Tests
+        run: docker-compose exec api python -m pytest "src/tests" -p no:warnings
+      - name: Run Client Tests
+        run: docker-compose exec client npm test
+
