--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -30,13 +30,13 @@ jobs:
       # Use Docker compose Github action
       - uses: isbang/compose-action@v1.0.0
       - name: Run Prettier Check
-        run: docker-compose exec --tty client npm run prettier:check 
+        run: docker-compose exec -t client npm run prettier:check 
       - name: Run Setup App
         run: |
-          docker-compose exec --tty api python manage.py recreate_db
-          docker-compose exec --tty api python manage.py seed_db
+          docker-compose exec -t api python manage.py recreate_db
+          docker-compose exec -t api python manage.py seed_db
       - name: Run Python Tests
-        run: docker-compose exec --tty api python -m pytest "src/tests" -p no:warnings
+        run: docker-compose exec -t api python -m pytest "src/tests" -p no:warnings
       - name: Run Client Tests
-        run: docker-compose exec --tty client npm test
+        run: docker-compose exec -t client npm test
 
