--- a/services/users/requirements.txt
+++ b/services/users/requirements.txt
@@ -1,7 +1,25 @@
-flask==1.1.2
+aniso8601==9.0.1
+attrs==21.2.0
+bcrypt==3.2.0
+cffi==1.14.5
+click==8.0.1
+Flask==1.1.2
 Flask-Admin==1.5.7
+Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.9
 flask-restx==0.2.0
 Flask-SQLAlchemy==2.4.4
+greenlet==1.1.0
 gunicorn==20.0.4
+itsdangerous==2.0.1
+Jinja2==3.0.1
+jsonschema==3.2.0
+MarkupSafe==2.0.1
 psycopg2-binary==2.8.6
-flask-cors==3.0.9
+pycparser==2.20
+pyrsistent==0.17.3
+pytz==2021.1
+six==1.16.0
+SQLAlchemy==1.4.18
+Werkzeug==2.0.1
+WTForms==2.3.3
