--- a/services/users/requirements.txt
+++ b/services/users/requirements.txt
@@ -17,6 +17,7 @@ jsonschema==3.2.0
 MarkupSafe==2.0.1
 psycopg2-binary==2.8.6
 pycparser==2.20
+PyJWT==2.1.0
 pyrsistent==0.17.3
 pytz==2021.1
 six==1.16.0
